guides/wide-ep-lws/manifests/gateway/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: wide-ep-inference-gateway
  rules:
    - backendRefs:
      - group: inference.networking.x-k8s.io
        kind: InferencePool
        name: deepseek-r1
        port: 8000
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
